--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+vk.callback:
+    path: /vk/callback
+    controller: App\VKBundle\Controller\VkCallbackController::handle
