--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,15 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    vk_confirmation_string: '%env(VK_CONFIRMATION_STRING)%'
+    vk_access_key: '%env(VK_ACCESS_KEY)%'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: true
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -22,3 +25,17 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\VKBundle\Controller\VkCallbackController:
+        arguments:
+            - '@logger'
+            - '%vk_confirmation_string%'
+        tags: { name: monolog.logger }
+
+    App\VKBundle\Client\VkClient:
+        arguments: ["%vk_access_key%"]
+
+    vk.handler.new_message:
+        class: App\VKBundle\Handler\NewMessageHandler
+        arguments:
+            - '@App\VKBundle\Client\VkClient'
