--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "ext-gearman": "^2.0",
         "ext-iconv": "*",
         "ext-json": "*",
+        "ext-curl": "*",
+        "j0k3r/php-imgur-api-client": "^4.0",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -35,7 +37,9 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "VKBundle\\": "src/VKBundle/"
+            "VKBundle\\": "src/VKBundle/",
+            "Console\\": "src/Console",
+            "ImgurBundle\\": "src/ImgurBundle"
         }
     },
     "autoload-dev": {
