--- a/.env.dist
+++ b/.env.dist
@@ -15,8 +15,15 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=70ba4aa14c150ef90d48d861f6984fce
+APP_SECRET=123abc
 ###< symfony/framework-bundle ###
 
-VK_CONFIRMATION_STRING=abc123
-VK_ACCESS_KEY=abc123
+VK_CONFIRMATION_STRING=123abc
+VK_ACCESS_KEY=123abc
+VK_GROUP_ID=123abc
+VK_CALLBACK_SECRET_KEY=123abc
+
+GEARMAN_SERVER=gearman
+
+IMGUR_CLIENT_ID=123abc
+IMGUR_CLIENT_SECRET=123abc
